added classes & fixed css rules

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
     font-display: swap;
   }
 
-body {
+.page {
     font-family: 'Roboto', sans-serif;
     font-size: 100%; /* 16px */
     line-height: 1.2;
@@ -44,31 +44,34 @@ body {
     color: #000;
 }
 
-a {
+.regular {
+     font-weight: 400;
+}
+
+.bold {
+    font-weight: 700;
+}
+
+.link {
     text-decoration: none;
     color: inherit;
 }
 
-ul {
+.list {
     list-style: none;
 }
 
-blockquote {
+.blockquote {
     font-family: 'Bitter', sans-serif;
 }
 
-h1,
-h3 {
-    font-family: 'Playfair Display', sans-serif;
-}
-
-h2 {
-    font-weight: 700;
+.section-title {
     font-size: 1.5rem; /* 24px */
 }
 
-h3 {
+.title-lg {
     font-weight: 500;
+    font-family: 'Playfair Display', sans-serif;
     font-size: 5.375rem;; /* 86px */
 }
 
@@ -78,13 +81,13 @@ h3 {
     font-size: 5.375rem; /* 86px */
 }
 
-nav {
+.nav {
     font-family: inherit;
     font-size: 1.5rem; /* 24px */
 }
 
-nav .active {
-    text-decoration: underline;
+.active {
+    text-decoration: underline; 
 }
 
 .main-title {
@@ -101,57 +104,32 @@ nav .active {
 }
 
 .biography-blockquote {
-    font-weight: 400;
     font-size: 1.625rem; /* 26px */
 }
 
-.person {
-    font-weight: 700;
-}
-
-.person span {
-    font-weight: 400;
-}
-
-.contacts div {
-    font-weight: 700;
-}
-
-.contacts a {
-    font-weight: 400;
-}
-
 .testimonials-blockquote {
-    font-family: 'Bitter', sans-serif;
-    font-weight: 400;
-    font-size: 2rem;
+    font-size: 2rem; /* 32px */
 }
 
 .strengths {
     font-family: 'Bitter', sans-serif;
-    font-weight: 400;
     font-size: 2.125rem;
 }
 
 /* В футере ещё белый текст, не стал указывать, так как его не будет видно в данный момент. */
-footer address a {
-    font-weight: 400;
+.footer-link {
     text-decoration: underline;
 }
 
-footer address a:last-child {
+.footer-link:last-child {
     text-transform: uppercase;
 }
 
-.footer-logo {
+.footer-text {
     font-size: 1.125rem;
 }
 
-.footer-logo span {
+.footer-logo {
     font-weight: 900;
     font-size: 1.5rem;
-}
-
-.copyright {
-    font-weight: 400;
 }
