--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
 }
 
 .regular {
-     font-weight: 400;
+    font-weight: 400;
 }
 
 .bold {
@@ -70,7 +70,15 @@
 }
 
 .blockquote {
+    margin: 0;
     font-family: 'Bitter', sans-serif;
+}
+.phrase {
+    margin: 0;
+}
+
+.section {
+    padding: 4.6875rem 0;
 }
 
 .section-title {
@@ -117,11 +125,16 @@
 
 /* Banner START */
 .banner {
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: gray;
-    height: calc(100vh - 135px);
+    height: 630px;
+    background-image: url('/img/banner.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .banner-content {
@@ -129,13 +142,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-.banner-content {
+    text-align: center;
     background-color: white;
     max-width: 690px;
     width: 100%;
     min-height: 360px;
+    padding: 4.0625rem;
+    box-sizing: border-box;
 }
 
 .main-title {
@@ -143,6 +156,8 @@
 }
 
 .banner-text {
+    margin: 0;
+    margin-top: 15px;
     font-size: 1.25rem; /* 20px */
 }
 /* Banner END */
@@ -154,7 +169,56 @@
     color: #0D0D0D;
 }
 
+.biography {
+    padding-top: 9.375rem;
+    max-width: 1170px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.biography .section-title {
+    writing-mode: vertical-lr;
+    text-orientation: mixed;
+    text-align: right;
+    transform: scale(-1);
+    padding-left: 48px;
+}
+
+.biography-head {
+    display: flex;
+    width: 49%;
+    height: auto;
+}
+
+.biography-photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.biography-body {
+    margin: auto 0;
+    width: 39%;
+    display: flex;
+    flex-direction: column;
+    gap: 3.3rem;
+}
+
+.biography-position-head {
+    font-size: 1.125rem;
+}
+
+.biography-position-skills {
+    display: flex;
+    gap: 9px;
+    flex-wrap: wrap;
+    font-size: 1.125rem;
+}
+
 .biography-blockquote {
+    text-wrap: balance;
     font-size: 1.625rem; /* 26px */
 }
 
