--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@
     color: #0D0D0D;
 }
 
+/* Biograpgy START */
 .biography {
     padding-top: 9.375rem;
     max-width: 1170px;
@@ -231,10 +232,77 @@
     height: 6px;
     background-color: #0D0D0D;
 }
+/* Biography END */
+
+/* Testimonials START */
+.testimonials {
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 20px;
+}
+
+.testimonials .section-title {
+    writing-mode: vertical-lr;
+    text-orientation: mixed;
+    text-align: right;
+    transform: scale(-1);
+    grid-column: span 2;
+    justify-self: self-start;
+}
+
+.testimonials-contacts {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    align-items: flex-end;
+    grid-column: 2 / 3;
+    justify-items: end;
+    padding-bottom: 35px;
+    padding-top: 50px;
+    padding-right: 15px;
+}
+
+.testimonials-contact {
+    writing-mode: vertical-lr;
+    text-orientation: mixed;
+    transform: scale(-1);
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.testimonials-photo {
+    max-width: 450px;
+    grid-column: span 4;
+}
+
+.testimonials-photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.testimonials-body {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-self: center;
+    gap: 35px;
+    grid-column: span 2;
+}
 
 .testimonials-blockquote {
     font-size: 2rem; /* 32px */
 }
+
+.testimonials-photo-small img {
+    width: 100%;
+    object-fit: cover;
+}
+/* Testimonials END */
 
 .strengths {
     font-family: 'Bitter', sans-serif;
