--- a/style.css
+++ b/style.css
@@ -368,12 +368,107 @@
 }
 /* Testimonials END */
 
-.strengths {
-    font-family: 'Bitter', sans-serif;
-    font-size: 2.125rem;
+/* Strong points START */
+
+
+/* flex */
+    .strong-points {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .strong-points .section-title {
+        padding-left: 16rem;
+    }
+
+    .strong-points-list {
+        display: flex;
+        align-items: flex-start;
+        padding-left: 1rem;
+        overflow: auto;
+        gap: 20px;
+    }
+
+    .strong-points-item {
+        min-width: 335px;
+        max-width: 24%;
+        width: 100%;
+    }
+
+    .strong-points-item-lg {
+        min-width: 450px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+    }
+
+    .strong-points-item .img {
+        width: 100%;
+        height: 555px;
+        object-fit: cover;
+    }
+
+    .strengths {
+        display: flex;
+        flex-direction: column;
+        gap: 2px;
+        font-family: 'Bitter', sans-serif;
+        font-size: 2.125rem;
+    }
+/* flex end */
+
+/* grid */
+@supports (display: grid){
+    .strong-points {
+        display: grid;
+        grid-template-rows: max-content max-content;
+    }
+    
+    .strong-points-list {
+        display: grid;
+        grid-template-columns: minmax(335px, 24%) minmax(335px, 24%) 450px minmax(335px, 24%);
+        grid-auto-columns: minmax(335px, 24%);
+        grid-auto-flow: column;
+    }
+    
+    .strong-points-item-lg {
+        display: grid;
+        justify-content: center;
+    }
+    
+    .strengths {
+        display: grid;
+        justify-content: center;
+        grid-auto-rows: 42px;
+        gap: 0;
+    }
 }
+/* grid end */
+
+
+
+
+/* Strong points END */
 
 /* В футере ещё белый текст, не стал указывать, так как его не будет видно в данный момент. */
+.footer {
+    padding: 0 1rem;
+    height: 168px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #fff;
+    background-color: #0D0D0D;
+}
+
+.footer-contacts {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
 .footer-link {
     text-decoration: underline;
 }
