--- a/style.css
+++ b/style.css
@@ -376,6 +376,7 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
+        padding-bottom: 9.375rem;
     }
 
     .strong-points .section-title {
