--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -14,6 +14,11 @@
     font-weight: $site-fw;
     color: $site-main-color;
     box-sizing: border-box;
+
+    &:has(.modal[open]) {
+        overflow: hidden;
+        height: 100vh;
+    }
 }
 
 .vertical {
@@ -26,6 +31,12 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.button {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
 }
 
 .link {
