--- a/styles/main.css
+++ b/styles/main.css
@@ -35,6 +35,10 @@
   color: #000000;
   box-sizing: border-box;
 }
+.page:has(.modal[open]) {
+  overflow: hidden;
+  height: 100vh;
+}
 
 .vertical, .contacts__item, .section__title_vertical {
   writing-mode: vertical-lr;
@@ -47,6 +51,12 @@
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .link {
@@ -112,6 +122,8 @@
 .nav {
   font-family: inherit;
   font-size: 1.5rem; /* 24px */
+  margin-left: auto;
+  margin-right: 1.25rem;
 }
 .nav__list {
   display: flex;
@@ -430,6 +442,43 @@
 .footer__logo {
   font-weight: 900;
   font-size: 1.5rem;
+}
+
+.modal {
+  border: none;
+  max-width: 75%;
+  border-radius: 0.625rem;
+}
+.modal__title {
+  font-size: 1.75rem;
+}
+.modal__triggers {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.625rem;
+}
+.modal__button {
+  border: 2px solid #000000;
+  color: #000000;
+  background-color: transparent;
+  border-radius: 0.5rem;
+  min-width: 210px;
+  padding: 0.5rem 0;
+  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+.modal__button:hover {
+  background-color: #000000;
+  color: #ffffff;
+}
+.modal::backdrop {
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
