--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,4 +9,6 @@
 @import './blocks/testimonials/_testimonials';
 @import './blocks/strong-points/_strong-points';
 @import './blocks/footer/_footer';
+@import './blocks/modal/modal';
+@import './blocks/modal/form';
 @import './media';
