--- a/styles/blocks/modal/_form.scss
+++ b/styles/blocks/modal/_form.scss
@@ -1,5 +1,37 @@
 .form {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: $form-gap;
+
+    &__group {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        gap: $form-group-gap;
+
+        &_horizontal {
+            flex-direction: row;
+        }
+
+        &_center {
+            justify-content: center;
+        }
+    }
+
+    &__label {
+        font-size: $label-fs;
+    }
+
+    &__input,
+    &__textarea {
+        padding: $input-padding;
+        border: $input-border-line;
+        border-radius: $input-border-radius;
+    }
+
+    &__textarea {
+        resize: none;
+        min-height: $textarea-height;
+    }
 }
