--- a/styles/blocks/modal/_modal.scss
+++ b/styles/blocks/modal/_modal.scss
@@ -1,35 +1,26 @@
 .modal {
+    flex-direction: column;
     border: none;
-    max-width: 75%;
-    border-radius: 0.625rem;
+    padding: $modal-padding;
+    max-width: $modal-width;
+    gap: $modal-gap;
+    border-radius: $modal-border-radius;
 
     &__title {
-        font-size: 1.75rem;
+        font-size: $modal-title-fs;
     }
 
-    &__triggers {
+    &__desc {
+        font-size: $modal-desc-fs;
+        font-weight: 400;
+    }
+
+    &[open] {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 0.625rem;
-    }
-
-    &__button {
-        border: 2px solid $site-main-color;
-        color: $site-main-color;
-        background-color: transparent;
-        border-radius: 0.5rem;
-        min-width: 210px;
-        padding: 0.5rem 0;
-        transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
-
-        &:hover {
-            background-color: $site-main-color;
-            color: $white-color;
-        }
     }
 
     &::backdrop {
         background-color: rgba(0,0,0,0.75);
     }
+
 }
