--- a/styles/blocks/modal/_form.scss
+++ b/styles/blocks/modal/_form.scss
@@ -38,6 +38,7 @@
         &-group {
             position: relative;
             display: flex;
+            flex-wrap: nowrap;
             width: 100%;
 
             &:focus-within {
