--- a/styles/main.css
+++ b/styles/main.css
@@ -45,7 +45,7 @@
   color: #000000;
   box-sizing: border-box;
 }
-.page:has(.modal[open]) {
+.page:has(.modal__inner[open]) {
   overflow: hidden;
   height: 100vh;
 }
@@ -517,13 +517,26 @@
   font-size: 1.5rem;
 }
 
-.modal {
+.modal__inner {
   flex-direction: column;
   border: none;
   padding: 1.25rem 1.25rem 1.875rem 1.25rem;
   max-width: 30rem;
-  gap: 1.5rem;
+  min-height: 595px;
+  height: 595px;
+  justify-content: space-between;
   border-radius: 0.625rem;
+}
+.modal__inner::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  inset: 0;
+  border: 2px solid #fff;
+  border-radius: 0.625rem;
+  transform: rotate(2deg);
+  z-index: -1;
 }
 .modal__title {
   font-size: 1.75rem;
@@ -532,24 +545,20 @@
   font-size: 1.125rem;
   font-weight: 400;
 }
-.modal[open] {
+.modal:has(.modal__inner[open]) {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+.modal:has(.modal__inner[open]) .modal__inner {
   display: flex;
 }
-.modal::backdrop {
-  background-color: rgba(0, 0, 0, 0.75);
-}
-.modal::before {
-  content: "";
-  position: fixed;
-  display: block;
-  min-width: 32.5rem;
-  min-height: 36rem;
-  border: 2px solid #ffffff;
-  transform: rotate(2deg);
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(2deg);
-  border-radius: 20px;
+.modal:not(:has(.modal__inner[open])) {
+  z-index: 0;
 }
 
 .form {
@@ -586,6 +595,7 @@
 .form__input-group {
   position: relative;
   display: flex;
+  flex-wrap: nowrap;
   width: 100%;
 }
 .form__input-group:focus-within .form__input-icon {
@@ -924,7 +934,7 @@
     justify-content: center;
     text-align: center;
   }
-  .modal {
+  .modal__inner {
     margin: auto 1rem;
   }
 }/*# sourceMappingURL=main.css.map */
