--- a/styles/main.css
+++ b/styles/main.css
@@ -119,17 +119,11 @@
   padding: 0.6875rem 0;
   border-radius: 0.5rem;
   min-width: 13.125rem;
-  transition: all 0.4s ease-in-out;
+  transition: border 0.4s ease-in-out, color 0.4s ease-in-out, background-color 0.4s ease-in-out, box-shadow 0.4s ease-in-out, outline 0.4s ease-in-out, transform 0.4s ease-in-out;
 }
 .button_inline {
   border: 1px solid #B3B3B3;
   color: #000000;
-}
-@media (hover: hover) {
-  .button_inline:hover {
-    border: 1px solid #000000;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.8);
-  }
 }
 .button_dark {
   border: 1px solid #000000;
@@ -149,6 +143,23 @@
   .button_ico:hover {
     transform: scale(0.8);
   }
+}
+.button:focus {
+  outline: none;
+}
+.button:focus-visible {
+  outline: 2px solid #000000;
+  outline-offset: 2px;
+}
+@media (hover: hover) {
+  .button:hover {
+    border: 1px solid #000000;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.8);
+  }
+}
+.button:active {
+  outline: none;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 /* Blocks styles */
@@ -196,7 +207,7 @@
 .nav__list {
   display: flex;
   align-items: center;
-  gap: 55px;
+  gap: 3.4375rem;
 }
 .nav__list-link:active {
   text-decoration: underline;
@@ -587,47 +598,98 @@
   border: 1px solid #B3B3B3;
   border-radius: 0.5rem;
 }
-.form__input {
+.form__input, .form__textarea {
   width: 100%;
   padding-right: 2.5rem;
   transition: all 0.4s ease-in-out;
 }
-.form__input-group {
+.form__input-group, .form__textarea-group {
   position: relative;
   display: flex;
   flex-wrap: nowrap;
   width: 100%;
 }
-.form__input-group:focus-within .form__input-icon {
+.form__input-group:focus-within svg, .form__textarea-group:focus-within svg {
   fill: #000000;
 }
-.form__input-icon {
+.form__input-icon, .form__textarea-icon {
   position: absolute;
   top: 50%;
   right: 0.5rem;
+  transition: fill 0.4s ease-in-out;
   transform: translateY(-50%);
+  fill: #868686;
+}
+.form__input:focus, .form__textarea:focus {
+  outline: none;
+}
+.form__input:focus-visible, .form__textarea:focus-visible {
+  outline: 2px solid #000000;
+  outline-offset: 2px;
+}
+.form__input:active, .form__textarea:active {
+  outline: none;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.form__input:valid, .form__textarea:valid {
+  border-color: #00b300;
+}
+.form__input:valid + svg, .form__textarea:valid + svg {
+  fill: #00b300;
+}
+.form__input:invalid, .form__textarea:invalid {
+  border-color: #ff2b2b;
+}
+.form__input:invalid + svg, .form__textarea:invalid + svg {
+  fill: #ff2b2b;
+}
+.form__input::-moz-placeholder, .form__textarea::-moz-placeholder {
+  color: rgba(0, 0, 0, 0.4);
+  font-size: 100%;
+}
+.form__input::placeholder, .form__textarea::placeholder {
+  color: rgba(0, 0, 0, 0.4);
+  font-size: 100%;
+}
+.form__input::-webkit-input-placeholder, .form__textarea::-webkit-input-placeholder {
+  color: rgba(0, 0, 0, 0.4);
+  font-size: 100%;
+}
+.form__input::-moz-placeholder, .form__textarea::-moz-placeholder {
+  color: rgba(0, 0, 0, 0.4);
+  font-size: 100%;
+}
+.form__input:-moz-placeholder, .form__textarea:-moz-placeholder {
+  color: rgba(0, 0, 0, 0.4);
+  font-size: 100%;
+}
+.form__input:-moz-placeholder-shown, .form__textarea:-moz-placeholder-shown {
+  border-color: #000000;
+  max-width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.form__input:placeholder-shown, .form__textarea:placeholder-shown {
+  border-color: #000000;
+  max-width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.form__input:-moz-placeholder-shown + svg, .form__textarea:-moz-placeholder-shown + svg {
+  fill: #868686;
+}
+.form__input:placeholder-shown + svg, .form__textarea:placeholder-shown + svg {
   fill: #868686;
 }
 .form__textarea {
-  padding-right: 2.5rem;
+  padding: 0.625rem 2.5rem 0.625rem 0.625rem;
   resize: none;
-  width: 100%;
   min-height: 7.1875rem;
 }
-.form__textarea-group {
-  position: relative;
-  display: flex;
-  width: 100%;
-}
-.form__textarea-group:focus-within .form__textarea-icon {
-  fill: #000000;
-}
 .form__textarea-icon {
-  position: absolute;
   top: 1rem;
-  right: 0.5rem;
-  transform: translateY(-50%);
-  fill: #868686;
 }
 .form__button {
   display: flex;
