--- a/styles/blocks/header/_nav.scss
+++ b/styles/blocks/header/_nav.scss
@@ -7,14 +7,14 @@
     &__list {
         display: flex;
         align-items: center;
-        gap: 55px;
+        gap: 3.4375rem;
 
         &-link {
             &:active {
                 text-decoration: underline; 
             }
 
-            @include hovered {
+            @include isHover {
                 text-decoration: none;
             }
         }
